
=head1 XML::EPP CHANGES

This POD file documents a summary of the changes in XML::EPP.  For the
full list of changes, refer to the git history.

=head2 VERSION 0.06 - ? JULY 2010

=over

=item *

Suppress a bunch of warnings with PRANG 0.11_01 and higher

=back

=head2 VERSION 0.05 - 12 JULY 2010

=over

=item *

Minor fixes to various classes, including allowing coercions where possible.

=item *

Packaging dependency updates (e.g. MooseX::StrictConstructor).

=item *

Lots of automatically generated boilerplate, but hopefully useful
documentation for the classes.  This is the start of a JavaDoc-like
system for automatically including documentation on the available
attributes in a class based on the definitions.

=item *

Initial support for RFC3915: Registrar Grace Period, see
L<XML::EPP::Grace>

=item *

Start to use C<MooseX::StrictConstructor> (incomplete;
needs to be added to all classes)

=back

=head2 VERSION 0.04 - 26 JUNE 2010

=over

=item *

Fixes for Info/Contact Response (what is required/optional)

=item *

Use MooseX::StrictConstructor to help when generating classes

=item *

Helpers to various PRANG classes

=item *

Fix POD for XML Schema Definitions

=item *

Initial setup of Pod for most Domain/Host/Contact classes

=item *

Added make-docs.pl

=item *

Load all XML::EPP::Domain/Host/Contact classes

=back

=head2 VERSION 0.03 - 7 May 2010

=over

=item *

Implementations of both the RFC5731 Domain mapping and the RFC5733
Contact mapping.  This should mean that PRANG now parses and emits all
of core EPP standard object types.

=item *

Relax some incorrect version requirements (perl 5.10.1 is I<not>
required!), and add a missing dependency that was causing many CPAN
testers failures.

=item *

Some (backwards-incompatible, but forewarned) API changes relating to
renaming attributes from their XML forms to more perlish names.  eg
C<clTRID> becomes C<client_id>

=back

=head2 VERSION 0.02 - 26 Apr 2010

=over

=item *
