@@ -18,7 +18,7 @@ SHA1 5ebf20e77850b956f9f03833932a7005ba59f0d9 COPYING.txt
 SHA1 87f7d9cabe2aa07a62f34e7c062e5841d45b4096 MANIFEST
 SHA1 7abe91f5efdddd60c777242c284d29adb9809f1f MANIFEST.SKIP
 SHA1 9b975e3bbf1ad01b4c3270ad91964d15e35db1d7 META.yml
-SHA1 475aef6584f0e2b9b6ffc5ebad25a88bebb0f794 Makefile.PL
+SHA1 906b9dd4489de1bd67ea296f7ee9da542fa6e506 Makefile.PL
 SHA1 b1a752c355af930c8d0460253ee0a12475d3847e README
 SHA1 82fdde74b9affaf4a3254fc23a2815f3c1f0f407 SubmittingPatches
 SHA1 1ebec4119486a032a5612a403e8d7b7be973e938 inc/Module/Install.pm
@@ -29,8 +29,8 @@ SHA1 0384525d85d51e99532e3ad8729d870113646d14 inc/Module/Install/Makefile.pm
 SHA1 38c657de4d91f5a60ff8e6c6f6a5547daf7c4ab2 inc/Module/Install/Metadata.pm
 SHA1 5c25f1104c0038041e3b93e0660c39171e4caf2b inc/Module/Install/Win32.pm
 SHA1 94d47349c803c4bd2a9230d25e4db0b6aaf1acd8 inc/Module/Install/WriteAll.pm
-SHA1 ed5208cd421459c1187a283f6cc1ac55fab6e4a4 lib/XML/EPP.pm
-SHA1 207bf1034c8fffab63049a945d7d0fd5233a876c lib/XML/EPP/Changes.pod
+SHA1 09a59a773f77b526fefb5ded432739e0209934a1 lib/XML/EPP.pm
+SHA1 f0d3f839e29ada56e04945b8cefd6e0dd7822149 lib/XML/EPP/Changes.pod
 SHA1 4a6ddbbf8a95d2304dc54147847a133104d01e8f lib/XML/EPP/Command.pm
 SHA1 770c13d9e5a51b27c4d93419ffc16483d967da17 lib/XML/EPP/Common.pm
 SHA1 e80bd36d32bd9f0e2923340348453d2b6786fd0f lib/XML/EPP/Common.pod
@@ -165,7 +165,7 @@ SHA1 ff1219608c99761d5d4e161ecf7a386e8f685d8a lib/XML/EPP/Domain/Update.pm
 SHA1 32dee8ab8ebce5fd264c03f8e5e5f2818bfeaf96 lib/XML/EPP/Domain/Update.pod
 SHA1 091cd3209ea236812570144ae1e3ddc6f0ded1a9 lib/XML/EPP/Domain/domain-1.0.xsd
 SHA1 85d0d5899a8557a29f0288131dfad66fb839be61 lib/XML/EPP/Domain/rfc5731.txt
-SHA1 8958ba5749da13f17e18db73ebc14f2a5b7b797d lib/XML/EPP/Error.pm
+SHA1 626d993cb7dd55be81cd7c4d264173848b4465fa lib/XML/EPP/Error.pm
 SHA1 3d6f0f5e6791eb4111167103cfaf5ebccdbee275 lib/XML/EPP/ExtURI.pm
 SHA1 7d6887cb5cd7a12cf904068b25ade71347947232 lib/XML/EPP/Extension.pm
 SHA1 150e0d5ef012f23753a2afa7c27b35f905c8f7ec lib/XML/EPP/Extension/Type.pm
@@ -232,7 +232,7 @@ SHA1 62fa1b58c541cb70e19ccab3dc4373f78e855403 lib/XML/EPP/Host/host-1.0.xsd
 SHA1 84f6d0ee88800ad3723190f0fa9242aeb47aa7c1 lib/XML/EPP/Host/rfc5732.txt
 SHA1 95e1ba389eaab858f7f3a5642d55a07d80f63c6e lib/XML/EPP/Login.pm
 SHA1 8ac8e4f766de16f0d29a73983284c922b687a6e1 lib/XML/EPP/MixedMsg.pm
-SHA1 848d2fd2401030a5c008a29a59a2e3452876ba8d lib/XML/EPP/Msg.pm
+SHA1 c0a39caa0412b0851d24cf901f680a7d651a12ef lib/XML/EPP/Msg.pm
 SHA1 a12f0cd83f975c63a04186664f005d0471386e81 lib/XML/EPP/MsgQ.pm
 SHA1 58d36cd5417604cfe6a946d49f866a772f638f08 lib/XML/EPP/Node.pm
 SHA1 b91a6749f661c52548646a7252ce53e34ffaf7bf lib/XML/EPP/Plugin.pm
@@ -256,7 +256,7 @@ SHA1 a1fcb99f31fea8fa9b9fd61b18cf24c218192d5e make-docs.pl
 SHA1 5291d96cc03642c14415373bb9cfdfdb56d3a4f8 t/00-load.t
 SHA1 07deae9bbf888dcf046e6663db508978b194f2b8 t/01-firsteg.t
 SHA1 977b4c935cbe3e24a79c01897075e0ada2712764 t/02-greeting-types.t
-SHA1 f77b7925b7ee62e81a98a08f18e009d5e682f18f t/03-error-types.t
+SHA1 83bd896fa45ef81f09abe37a3f98eda2253dee97 t/03-error-types.t
 SHA1 2170f2a08854c15434f7f19ea428775e541f8329 t/20-xml-rfc5730.t
 SHA1 92d67ed172c538fb157aa13d698f91f9110162ae t/20-xml-rfc5730/minimal/01-minimal-login.xml
 SHA1 d69ef61faec0dfd13f0eb15e37a2dcae5d681914 t/20-xml-rfc5730/rfc-examples/01-hello.xml
@@ -364,7 +364,7 @@ SHA1 8885c0379523401ed6e37eff27c8c4d9c21e3d4d t/rfc-eg-sucker.pl
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v1.4.10 (GNU/Linux)
 
-iEYEARECAAYFAkxH7P8ACgkQ/AZAiGayWEPuRgCeOKdMxlkGwK+5ZYoi6NDVMX7s
-4MAAoJRXmJkxB/y/FzK4tNAC4A34dYJh
-=XSbm
+iEYEARECAAYFAkxJF90ACgkQ/AZAiGayWENuUgCcDwzIM3cveRs5vzA300yEpq+d
+T0AAoL13gpUX52JhxrkHxTJo0yDhSnqo
+=a4fZ
 -----END PGP SIGNATURE-----
