@@ -10,7 +10,7 @@ use constant XSI_XMLNS => "http://www.w3.org/2001/XMLSchema-instance";
 
 use XML::EPP::Common;
 
-our $VERSION = "0.05_01";
+our $VERSION = "0.05_02";
 
 our $PKG;
 BEGIN{ $PKG = "XML::EPP" };
